# TIP-kr3

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
